# PixelAnnotationTool

./: CMakeLists.txt  README.md  git_version.cmake.in  main.cpp
include/: about_dialog.h  image_canvas.h  image_mask.h  label_widget.h  labels.h  main_window.h  utils.h
src/: about_dialog.cpp  image_canvas.cpp  image_mask.cpp  label_widget.cpp  labels.cpp  main_window.cpp  utils.cpp
ui/: main_window.ui
